--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+tasks.jar{
+	manifest {
+		attributes["Main-Class"] = "com.example.application.LibraryManagerApiApplication"
+	}
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
