--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -4,6 +4,9 @@ spring:
     username: ${PGUSER}
     password: ${PGPASSWORD}
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
     hibernate:
       ddl-auto: create
